[gd_scene load_steps=7 format=3 uid="uid://bovpg4jmn5nqu"]

[ext_resource type="Script" path="res://objects/system/settings/Option.gd" id="1_sp4ns"]
[ext_resource type="PackedScene" uid="uid://bli02m5v875nl" path="res://objects/system/label/CustomLabel.tscn" id="1_tdbpd"]
[ext_resource type="Texture2D" uid="uid://d0akw842o4pyu" path="res://sprites/lobby/arrow.png" id="3_rg12k"]

[sub_resource type="Animation" id="Animation_5ldoy"]
resource_name = "left"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftArrow:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-16, 0), Vector2(0, 0), Vector2(-16, 0)]
}

[sub_resource type="Animation" id="Animation_mahgu"]
resource_name = "right"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightArrow:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(16, 0), Vector2(0, 0), Vector2(16, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xke66"]
_data = {
"left": SubResource("Animation_5ldoy"),
"right": SubResource("Animation_mahgu")
}

[node name="Option" type="Node2D"]
script = ExtResource("1_sp4ns")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xke66")
}

[node name="OptionLabel" parent="." instance=ExtResource("1_tdbpd")]
text = "unknown:"
fontSize = 2
fontColor = Color(1, 0.752941, 0.12549, 1)
alignment = 6

[node name="SelectionLabel" parent="." instance=ExtResource("1_tdbpd")]
position = Vector2(16, 0)
text = "unknown"
fontSize = 2
alignment = 4

[node name="LeftArrow" type="Sprite2D" parent="."]
position = Vector2(-144, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_rg12k")
offset = Vector2(-16, 0)
hframes = 2

[node name="RightArrow" type="Sprite2D" parent="."]
position = Vector2(160, 0)
scale = Vector2(2, 2)
texture = ExtResource("3_rg12k")
offset = Vector2(16, 0)
hframes = 2
frame = 1
